Move component logic into a new module.

--- a/core/components/api/build.gradle
+++ b/core/components/api/build.gradle
@@ -5,3 +5,7 @@ plugins {
 android {
     namespace 'uk.co.jordanterry.squares.core.components.api'
 }
+
+dependencies {
+    implementation(libs.kotlinx.serializationCore)
+}
