--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
 
 dependencies {
     implementation platform(libs.androidx.composeBom)
+    implementation project(":core:components:api")
+    implementation project(":core:components:di")
+    implementation project(":core:components:impl")
     implementation libs.androidx.activity
     implementation libs.androidx.activityCompose
     implementation libs.androidx.compose.animation
@@ -47,7 +50,6 @@ dependencies {
     implementation libs.hilt.navigationCompose
     implementation libs.kotlinx.coroutinesCore
     implementation libs.kotlinx.serializationCore
-    implementation libs.kotlinx.serializationJson
 
     debugImplementation libs.androidx.compose.uiTooling
 
