--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,5 @@ include ':app'
 include ':core:components:api'
 include ':core:components:impl'
 include ':core:components:di'
+include ':core:components-ui'
+include ':core:theme'
