--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,6 @@ plugins {
 }
 
 android {
-    namespace 'uk.co.jordanterry.squares'
-
     defaultConfig {
         applicationId "uk.co.jordanterry.squares"
         targetSdk = 35
@@ -19,9 +17,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    buildFeatures {
-        compose true
-    }
 }
 
 dependencies {
@@ -29,11 +24,12 @@ dependencies {
     implementation project(":core:components:api")
     implementation project(":core:components:di")
     implementation project(":core:components:impl")
+    implementation project(":core:components-ui")
+    implementation project(":core:theme")
     implementation libs.androidx.activity
     implementation libs.androidx.activityCompose
     implementation libs.androidx.compose.animation
     implementation libs.androidx.compose.foundation
-    implementation libs.androidx.compose.foundationLayout
     implementation libs.androidx.compose.material3
     implementation libs.androidx.compose.runtime
     implementation libs.androidx.compose.ui
@@ -48,7 +44,6 @@ dependencies {
     implementation libs.androidx.navigationRuntime
     implementation libs.androidx.viewmodelCompose
     implementation libs.hilt.navigationCompose
-    implementation libs.kotlinx.coroutinesCore
     implementation libs.kotlinx.serializationCore
 
     debugImplementation libs.androidx.compose.uiTooling
