--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name="uk.co.jordanterry.squares.SquaresApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -11,12 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Squares"
-        tools:targetApi="31"
-        android:name=".SquaresApplication">
+        tools:targetApi="31">
         <activity
-            android:name=".SquaresActivity"
+            android:name="uk.co.jordanterry.squares.SquaresActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Squares">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
