--- a/core/components/api/build.gradle
+++ b/core/components/api/build.gradle
@@ -1,9 +1,5 @@
 plugins {
-    id("uk.co.jordanterry.squares.android.library")
-}
-
-android {
-    namespace 'uk.co.jordanterry.squares.core.components.api'
+    id("uk.co.jordanterry.squares.kotlin.library")
 }
 
 dependencies {
