--- a/core/components/di/build.gradle
+++ b/core/components/di/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-    id("uk.co.jordanterry.squares.android.library")
+    id("uk.co.jordanterry.squares.kotlin.library")
 }
 
-android {
-    namespace 'uk.co.jordanterry.squares.core.components.di'
+dependencies {
+    api project(":core:components:api")
+    api project(":core:components:impl")
 }
