--- a/settings.gradle
+++ b/settings.gradle
@@ -27,6 +27,7 @@ dependencyResolutionManagement {
 }
 
 rootProject.name = "Squares"
+enableFeaturePreview("TYPESAFE_PROJECT_ACCESSORS")
 include ':app'
 include ':core:components:api'
 include ':core:components:impl'
