--- a/core/theme/build.gradle
+++ b/core/theme/build.gradle
@@ -4,13 +4,13 @@ plugins {
 
 dependencies {
 
-    implementation platform(libs.androidx.composeBom)
+    implementation platform(libs.compose.bom)
 
-    implementation libs.androidx.compose.foundation
-    implementation libs.androidx.compose.material3
-    implementation libs.androidx.compose.runtime
-    implementation libs.androidx.compose.ui
-    implementation libs.androidx.compose.uiGraphics
-    implementation libs.androidx.compose.uiText
-    implementation libs.androidx.compose.uiUnit
+    implementation libs.compose.foundation
+    implementation libs.compose.material3
+    implementation libs.compose.runtime
+    implementation libs.compose.ui
+    implementation libs.compose.uiGraphics
+    implementation libs.compose.uiText
+    implementation libs.compose.uiUnit
 }
